# near-omnichain-rs

./: .gitignore  Cargo.toml  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  LAYOUT_FIXES.md  README.md  UI_UX_IMPROVEMENTS.md  build-wasm.sh  run-demo.sh
backend/: .env.example  README.md  package-lock.json  package.json  server.js
backend/services/: chainlinkCCIP.js  omnibridgeService.js  transactionMonitor.js
bridge-contract/: Cargo.toml
bridge-contract/src/: lib.rs
docs/: BUFFER_ISSUE_FIX.md  GETTING_STARTED.md  NEAR_SIGNATURES_GUIDE.md  NEAR_WALLET_INTEGRATION.md  PROJECT_OVERVIEW.md  QUICK_START.md  SETUP_SUMMARY.md
examples/: base_to_avalanche_swap.rs  cross_chain_example.rs  near_signature_example.rs  near_signed_base_to_avalanche_swap.rs
frontend/: README.md  debug-test.html  demo-ui.html  index.html  multi-wallet-test.html  near-connection-test.html  package.json  simple-test.html  test-near-connection.html  vite.config.js
frontend/src/: main-nuclear.js  main.js  polyfills.js
frontend/src/config/: constants.js
frontend/src/modules/: eventEmitter.js  logger.js  modernUIManager.js  multiWalletManager.js  nearWallet.js  nearWalletFallback.js  simpleNearWallet.js  transactionManager.js  uiManager.js  walletConnectProvider.js  walletManager.js  walletSelector.js  wasmTransactionManager.js
frontend/src/services/: apiClient.js
frontend/src/styles/: main.css
src/: lib.rs  wasm.rs
src/bitcoin/: utils.rs
src/bitcoin/types/: script_buf.rs
src/bitcoin/types/tx_in/: sequence.rs
src/evm/: evm_transaction.rs  types.rs
src/near/: near_transaction.rs
src/near/types/: integers.rs  mod.rs  public_key.rs
tests/: bitcoin_integration_test.rs  near_integration_test.rs
tests/utils/: bitcoin_utils.rs
