[package]
name = "omni-transaction"
version = "0.2.1"
authors = ["Proximity Labs Limited"]
license = "Apache-2.0"
edition = "2021"
repository = "https://github.com/near/omni-transaction-rs"
description = "Transaction builder for all chains in Rust"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true

[features]
default = ["all"]
all = ["near", "bitcoin", "evm"]
bitcoin = ["sha2"]
evm = []
near = []
wasm = ["wasm-bindgen", "js-sys", "web-sys", "serde-wasm-bindgen", "getrandom/js"]

[dependencies]
rlp = "0.6.1"
hex = "0.4.3"
borsh = { version = "1.0.0", features = ["derive"] }
near-sdk = { version = "5.3.0", features = ["schemars"] }
near-account-id = { version = "1.0.0", features = ["schemars", "schemars-stable"] }
serde-big-array = "0.5.1"
bs58 = "0.5.1"
serde = "1.0"
serde_json = "1.0"
schemars = { version = "0.8" }
sha2 = { version = "0.10.8", optional = true }
md5 = "0.7"

# WASM bindings
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
js-sys = "0.3"
web-sys = { version = "0.3", features = [
  "console",
  "Window",
  "Document",
  "Element",
] }
serde-wasm-bindgen = "0.6"

[dependencies.getrandom]
version = "0.2"
features = ["js"]

[dev-dependencies]
# ethereum
alloy = { version = "0.3.3", features = ["full", "node-bindings", "rlp"] }
alloy-rlp = { version = "0.3.8", features = ["derive"] }
alloy-primitives = { version = "0.8.3" }

# near
near-primitives = { version = "0.25.0" }
near-crypto = { version = "0.25.0" }
near-jsonrpc-client = { git = "https://github.com/omni-rs/near-jsonrpc-client-rs", tag = "v0.12.1" }
near-workspaces = { version = "0.13.0", features = [
    "experimental",
    "unstable",
] }

# bitcoin
bitcoin = { version = "0.32.0", default-features = false, features = [
    "std",
    "serde",
    "rand-std",
    "rand",
    "secp-lowmemory",
    "secp-recovery",
] }
k256 = { version = "0.13.1", features = [
    "sha256",
    "ecdsa",
    "serde",
    "arithmetic",
    "expose-field",
] }

# async
tokio = { version = "1.38", features = ["full"] }

# misc
eyre = "0.6"

# testing
omni-testing-utilities = { git = "https://github.com/Omni-rs/omni-testing-utilities", branch = "main" }
